--- a/BasicBot.csproj
+++ b/BasicBot.csproj
@@ -23,6 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="WebApiContrib.Formatting.JavaScriptSerializer" Version="0.9.4" />
     <PackageReference Include="websocket-sharp.clone" Version="3.0.0" />
   </ItemGroup>
 
